# ussdframework

./: .gitignore  Cargo.toml  LICENSE  Makefile.toml  README.md  REAME.md  makefile
_next/: BUILD_ID  app-build-manifest.json  app-path-routes-manifest.json  build-manifest.json  next-server.js.nft.json  prerender-manifest.js  prerender-manifest.json  required-server-files.json  routes-manifest.json  trace
_next/cache/: .tsbuildinfo
_next/cache/eslint/: .cache_vyduhp
_next/cache/webpack/client-development/: index.pack.gz.old
_next/cache/webpack/client-development-fallback/: index.pack.gz.old
_next/server/: app-paths-manifest.json  middleware-build-manifest.js  next-font-manifest.js  next-font-manifest.json  server-reference-manifest.js  server-reference-manifest.json
_next/server/app/: _not-found.js  _not-found.rsc  _not-found_client-reference-manifest.js  admin.html  admin.rsc  index.html  index.rsc  page.js  page.js.nft.json  page_client-reference-manifest.js
_next/server/chunks/: 230.js  39.js
_next/server/pages/: 404.html  500.html
_next/static/chunks/: main-app-fe29ac5775f92302.js  main-bc03357062f27f11.js  webpack-39c3ab5aa0144aed.js  webpack-f8943da987e48fa6.js
_next/static/css/: 2c0ee71f27392d73.css  f32e78e94751764b.css
_next/types/app/: layout.ts  page.ts
examples/: Cargo.toml  basic_usage.rs  makefile
examples/controller/: mod.rs
examples/data/: menu.json
examples/functions/: account.rs  buy_airtime.rs  mod.rs
examples/session/: mod.rs
frontend/: package-lock.json  package.json
frontend/src/api/: route.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/constants/: links.ts
frontend/src/context/: navigation.context.tsx
frontend/src/types/: form.type.ts  model.type.ts  screen.type.ts  service.type.ts  table.type.ts
migrations/: 2_add_services_table
migrations/2024-05-10-163320_create_services/: down.sql  up.sql
migrations/2024-05-21-140840_ussd_services/: down.sql  up.sql
src/: lib.rs  main.rs  menu.rs  prelude.rs  screens.rs  types.rs  ussd_request.rs  ussd_response.rs  ussd_screens.rs  ussd_service.rs  ussd_session.rs
src/_next/: BUILD_ID  app-build-manifest.json  next-server.js.nft.json  required-server-files.json  trace
src/_next/server/: next-font-manifest.js  server-reference-manifest.json
src/admin/: mod.rs
src/builder/: README.md  menu.rs  menubuilder.rs  mod.rs
src/builder/admin/: api.rs
src/builder/api/: database.rs  file.rs  menu_items.rs  mod.rs  router_options.rs  screens.rs  services.rs
src/builder/database/: migrations.rs  mod.rs
src/builder/file/: mod.rs
src/builder/schema/: mod.rs  model_screen.rs  model_service.rs
src/builder/server/: actix.rs  exp.rs  mod.rs  warp.rs
src/core/: mod.rs  process.rs  start.rs  ussd_menu.rs  ussd_request.rs  ussd_response.rs  ussd_screens.rs  ussd_service.rs  ussd_session.rs
src/core/interface/: mod.rs  ussd_config.rs  ussd_gateway.rs  ussd_menu.rs  ussd_request.rs  ussd_response.rs  ussd_screen.rs  ussd_service.rs  ussd_session.rs
src/core/screens/: function.rs  input.rs  menu.rs  mod.rs  quit.rs  router.rs
src/data/: menu.json  screens.json
src/database/: mod.rs
src/examples/: mod.rs  simple_ussd_example.rs
src/helper/: mod.rs  stack.rs
src/interface/: mod.rs  model.rs  screen.rs  ussd_menu.rs  ussd_request.rs  ussd_screen.rs  ussd_session.rs
src/interface/ussd/: mod.rs  ussd_handler.rs  ussd_request.rs  ussd_screen.rs  ussd_session.rs
src/log/: mod.rs
src/menu/: mod.rs
src/model/screen/: custom.rs  function.rs  initial.rs  menu.rs  mod.rs  quit.rs  router.rs
src/static/: build-manifest.json  prerender-manifest.js  prerender-manifest.json
src/static/cache/: .tsbuildinfo
src/static/server/: middleware-build-manifest.js  next-font-manifest.json  server-reference-manifest.js
src/types/: mod.rs
src/utils/: expr.rs  func.rs  mod.rs
src_old/core/: second.rs
src_old/core/interface/: ussd_menu.rs  ussd_response.rs  ussd_screen.rs  ussd_service.rs
src_old/core/screens/: input.rs  mod.rs  quit.rs
src_old/data/: menu.json
src_old/helper/: stack.rs
src_old/types/: mod.rs
static/: index.html
(+130 files in other folders)
