[package]
name = "ussdframework"
version = "0.1.0"
edition = "2021"
authors = ["Rhaqim <anusiemj@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "ussdframework"
path = "src/lib.rs"
crate-type = ["lib"]

[[bin]]
name = "main"
path = "src/main.rs"

[dependencies]
actix-files = "0.6.5"
actix-web = "4.0"
chrono = { version = "0.4", features = ["serde"] }
config = "0.14.0"
diesel = { version = "2.1.4", features = ["sqlite", "r2d2"], optional = false }
dotenv = { version = "0.15.0", optional = false }
lazy_static = "1.4.0"
postgres = { version = "0.19.0", optional = false }
regex = "1.5.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }

[features]
# menubuilder = ["postgres", "diesel", "dotenv"]
menubuilder = []
