[package]
name = "ussdframework"
version = "0.1.0"
edition = "2021"
authors = ["Rhaqim <anusiemj@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "ussdframework"
path = "src/lib.rs"
crate-type = ["lib"]

[[bin]]
name = "main"
path = "src/main.rs"

[dependencies]
# web framework
warp = "0.3.0"

# helpers
chrono = { version = "0.4", features = ["serde"] }
config = "0.14.0"
lazy_static = "1.4.0"
regex = "1.5.4"

# serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# async
tokio = { version = "1.0", features = ["full"] }

# feature dependencies // change to optional for build
actix-files = { version = "0.6.5", optional = true  }
actix-web = { version = "4.0", optional = false}
diesel = { version = "2.1.4", features = ["sqlite", "r2d2"], optional = true }
diesel_migrations = { version = "2.1.0", optional = true }
dotenv = { version = "0.15.0", optional = true }

[features]
menubuilder = ["diesel", "diesel_migrations", "dotenv"]
# menubuilder = []
