[package]
name = "ussdframework"
version = "0.1.0"
edition = "2021"
authors = ["Rhaqim <anusiemj@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "ussdframework"
path = "src/lib.rs"
crate-type = ["lib"]

[[bin]]
name = "main"
path = "src/main.rs"

[build-dependencies]
# Required to execute shell commands during build
cargo-make = "0.37.12"

[dependencies]
# web framework
actix-files = "0.6.5"
actix-web = "4.0"
actix-multipart = "0.6.1"
futures-util = "0.3.17"

# helpers
chrono = { version = "0.4", features = ["serde"] }
config = "0.14.0"
lazy_static = "1.4.0"
regex = "1.5.4"
static_dir = "0.2.0"

# serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# async
tokio = { version = "1.0", features = ["full"] }

# feature dependencies // change to optional for build
diesel = { version = "2.1.4", features = ["sqlite", "r2d2"], optional = false }
diesel_migrations = { version = "2.1.0", optional = false }
dotenv = { version = "0.15.0", optional = false }

[features]
# menubuilder = ["diesel", "diesel_migrations", "dotenv"]
menubuilder = []
