[package]
name = "ussdframework_examples"
version = "0.1.0"
edition = "2021"
authors = ["Rhaqim <anusiemj@gmail.com>"]

[[bin]]
name = "basic_usage"
path = "basic_usage.rs"

[dependencies]
ussdframework = { path = "../" }  # Link to the local ussdframework directory
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Redis client library
# redis = "0.24.0"
# HTTP server library
# hyper = "1.2.0"
# Routing library
# routerify = "3.0.0"
# Templating library
# askama = "0.12.1"