[package]
name = "ussdframework_examples"
version = "0.1.0"
edition = "2021"
authors = ["Rhaqim <anusiemj@gmail.com>"]

[[bin]]
name = "basic_usage"
path = "basic_usage.rs"

[dependencies]
ussdframework = { path = "../", features = ["menubuilder"] }  # Link to the local ussdframework directory
# Redis client library
# redis = "0.24.0"